--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
 - test webgui: ??
-    auth system
     import_book
     update_book_ext_info
     apply_upd_changes
@@ -8,6 +7,7 @@
     add_book + cancel
     edit_book
     upload_cover
+- webgui ajax: also change input hidden csrf token    
 - update unchanged vals from db when loading instance?    
 - remove copy pasted html/css
 
